# comparex

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  f.txt  format.sh
.github/workflows/: bazel-build.yml
cli/: BUILD.bazel  main.cc
doc/script/: plot_myers.py
lib/myers/: BUILD.bazel  algorithm.hpp  algorithm_test.cc  benchmark.cc  classic.hpp  classic_benchmark.cc  classic_test.cc  comparator_test.cc  comparator_test.hpp  previous.hpp  record.hpp  split_wavefront.hpp
lib/profile/: BUILD.bazel  noop.hpp  track.hpp
