load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
)

format_multirun(
    name = "format",
    starlark = "@buildifier_prebuilt//:buildifier",
)

format_test(
    name = "format_test",
    size = "small",
    no_sandbox = True,
    starlark = "@buildifier_prebuilt//:buildifier",
    workspace = "//:MODULE.bazel",
)
