cc_library(
    name = "myers",
    hdrs = [
        "classic.hpp",
    ],
    deps = [
        "//lib/profile:profile",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "classic_test.cc",
    ],
    size="small",
    deps = [
        ":myers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "benchmark",
    srcs = [
        "classic_benchmark.cc",
    ],
    size="small",
    deps = [
        ":myers",
        "@google_benchmark//:benchmark",
        "@google_benchmark//:benchmark_main",
    ],
)