cc_library(
    name = "myers",
    hdrs = [
        "record.hpp",
        "classic.hpp",
        "split_wavefront.hpp",
    ],
    deps = [
        "//lib/profile:profile",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "comparator_test",
    hdrs = [
        "comparator_test.hpp",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "comparator_test.cc",
    ],
    size="small",
    deps = [
        ":myers",
        "comparator_test",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "benchmark",
    srcs = [
        "benchmark.cc",
    ],
    size="small",
    deps = [
        ":myers",
        "@google_benchmark//:benchmark",
        "@google_benchmark//:benchmark_main",
    ],
)