cc_library(
    name = "myers",
    hdrs = [
        "classic.hpp",
        "record.hpp",
        "split_wavefront.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/profile",
    ],
)

cc_library(
    name = "comparator_test",
    hdrs = [
        "comparator_test.hpp",
    ],
)

cc_test(
    name = "test",
    size = "small",
    srcs = [
        "comparator_test.cc",
    ],
    deps = [
        "comparator_test",
        ":myers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "benchmark",
    size = "small",
    srcs = [
        "benchmark.cc",
    ],
    deps = [
        ":myers",
        "@google_benchmark//:benchmark",
        "@google_benchmark//:benchmark_main",
    ],
)
